2007-11-08 arne

	* COptionMenuScheme is deprecated
	* removed CParamDisplay::setTxtFace and getTxtFace
	* CoreText support for building 64 bit variant on Mac OS X.
	* refactoring of COptionMenu, menu items have their own class (CMenuItem) with support for Icons. (Windows not completely done yet)
		Source code changes may occur as item states are not encoded in the title anymore
	* some cocoa fixes
	* autosizing support for views
	
2007-10-16 arne

	* Cocoa support (except CTooltipSupport and CFileSelector)

2007-10-08 arne

	* created vstgui_350 branch

2007-10-03 arne

	* add visible state for CView
	* onMouseExited wasn't called on Mac OS X when mouse leaves the frame
	* changed order for setDirty (false) and invalidRect (size) in CView::invalid () which should fix some issues with non drawing updates
	
2007-08-17 arne

	* Unicode support for Windows (CFileSelector is not completely done yet)
	* CDrawContext::drawRect should draw the same now with Quartz and GDI+
	* initial fixes to support VSTGUI_FLOAT_COORDINATES for GDI+ (but there a many problems, so it's useless at the moment)
	
2007-08-05 arne

	* CSlider should work with non normalized values if you set setMinValue and setMaxValue

2007-07-28 arne

	* use compositing window on windows only if running under vista
	* fix a typo in CFrame::getBackBuffer() which leads to screen flicker under Windows XP
	* use frame window for CFileselector if ENABLE_VST_EXTENSION_IN_VSTGUI is zero
	* add fix from Julien for Drag&Drop from Internet Explorer 7
	* fix Logic 7 white rectangle drawing on editor close
	
2007-07-01 arne

	* added new method to CTabView to use custom control as tab switch button
	
2007-05-20 arne

	* fixed a bug in CViewContainer::onKeyDown/onKeyUp, method result was always -1
	
2007-03-31 arne

	* more on doxygen documentation
	* changed CTextEdit::setText (char* txt) to CTextEdit::setText (const char* txt)
	* changed typedef of CViewAttributeID to unsigned int from unsigned long
	
2007-03-25 arne
